src/objects/SREC_Contract_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Payout_Limit__c</fullName>
        <label>Cash Payout Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>SREC Contract Offers</relationshipLabel>
        <relationshipName>SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <label>Contract Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_States__c</fullName>
        <label>Eligible States</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Should match based on Term Loan from SDQ</description>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>SREC Contract Offers</relationshipLabel>
        <relationshipName>SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <label>Leasing Option</label>
        <picklist>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <label>Monthly Amount ($)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Earnings_Based_on_KW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SREC Earnings Based on KW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Market</label>
        <referenceTo>SREC_Market__c</referenceTo>
        <relationshipLabel>SREC Contract Offers</relationshipLabel>
        <relationshipName>SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upfront_Amount__c</fullName>
        <label>Upfront Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_Dollar__c</fullName>
        <label>Yearly Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_of_ACP__c</fullName>
        <label>Yearly Amount (% of ACP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>SREC Contract Offer</label>
    <nameField>
        <label>SREC Contract Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SREC Contract Offers</pluralLabel>
    <recordTypes>
        <fullName>Brokerage</fullName>
        <active>true</active>
        <label>Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront</fullName>
        <active>true</active>
        <label>Upfront</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront_Cash_Back</fullName>
        <active>true</active>
        <label>Upfront Cash Back</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yearly</fullName>
        <active>true</active>
        <label>Yearly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>